fix(ui): make scrollbar corner transparent

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -414,6 +414,7 @@ html[data-theme='dark'] .sl-text-warning {
 }
 
 ::-webkit-scrollbar-corner {
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
